--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,11 @@
         <item name="android:textColorPrimary">@color/default_text</item>
     </style>
 
+    <style name="pop_voice">
+        <item name="android:windowEnterAnimation">@anim/pop_voice_in</item>
+        <item name="android:windowExitAnimation">@anim/pop_voice_out</item>
+    </style>
+
     <style name="setting_item">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -145,4 +150,5 @@
         <item name="android:padding">5dp</item>
         <item name="android:layout_marginStart">10dp</item>
     </style>
+
 </resources>
