给project添加分页 给个人信息里的任务详情添加时间选择和添加备注

--- a/app/src/main/res/layout/adapter_add_pic.xml
+++ b/app/src/main/res/layout/adapter_add_pic.xml
@@ -3,4 +3,5 @@
     android:id="@+id/add_iv_pic"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:scaleType="fitXY"
     android:background="@color/gray_lin"/>
