--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,6 +60,10 @@
         <item name="android:textSize">15sp</item>
         <item name="android:typeface">normal</item>
     </style>
+    <style name="pro_name_expanded">
+        <item name="android:textSize">20sp</item>
+        <item name="android:typeface">normal</item>
+    </style>
 
     <style name="per_name_collapsed">
         <item name="android:textSize">12sp</item>
@@ -149,6 +153,15 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">5dp</item>
         <item name="android:layout_marginStart">10dp</item>
+    </style>
+
+    <style name="pro_btn_item_text">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/cal_text</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
