--- a/app/src/main/res/layout/fragment_pro_item5.xml
+++ b/app/src/main/res/layout/fragment_pro_item5.xml
@@ -4,5 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/title" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="@color/gray_lin" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/pro_item5_rv_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
 </LinearLayout>
