--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -11,21 +11,21 @@
 
     <EditText
         android:id="@+id/log_et_username"
-        style="@style/log_iv"
+        style="@style/log_ev"
         android:hint="@string/log_et_username"
         android:layout_marginTop="95dp"
         android:inputType="text" />
 
     <EditText
         android:id="@+id/log_et_password"
-        style="@style/log_iv"
+        style="@style/log_ev"
         android:layout_below="@+id/log_et_username"
         android:hint="@string/log_et_password"
         android:inputType="textPassword" />
 
     <EditText
         android:id="@+id/log_et_phone"
-        style="@style/log_iv"
+        style="@style/log_ev"
         android:layout_below="@+id/log_et_password"
         android:hint="@string/log_et_phone"
         android:inputType="phone" />
