--- a/app/src/main/res/drawable/edittext_bg_select.xml
+++ b/app/src/main/res/drawable/edittext_bg_select.xml
@@ -15,7 +15,7 @@
     <item android:drawable="@mipmap/edittext_bg_press" android:state_selected="true" />
 
     <!-- 获得焦点时的图片背景 -->
-    <item android:drawable="@mipmap/edittext_bg_press" android:state_focused="true" />
+    <item android:drawable="@mipmap/edittext_bg_press" android:state_focused="true" android:state_enabled="true" />
 
     <!-- 默认时的背景图片 -->
     <item android:drawable="@mipmap/edittext_bg" />
