--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <include layout="@layout/title" />
 
@@ -15,90 +15,42 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:orientation="vertical">
 
         <TextView
-            style="@style/setting_item"
-            android:paddingLeft="0dp"
+            style="@style/notification_cart"
             android:text="@string/not_tv_type" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/gray_lin" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <CheckBox
+            android:id="@+id/not_cb_type1"
+            style="@style/notification_checkbox"
+            android:text="@string/not_tv_type1" />
 
-            <TextView
-                style="@style/setting_item"
-                android:text="@string/not_tv_type1" />
+        <CheckBox
+            android:id="@+id/not_cb_type2"
+            style="@style/notification_checkbox"
+            android:text="@string/not_tv_type2" />
 
-            <CheckBox
-                android:id="@+id/not_cb_type1"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:gravity="center" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                style="@style/setting_item"
-                android:text="@string/not_tv_type2" />
-
-            <CheckBox
-                android:id="@+id/not_cb_type2"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:gravity="center" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                style="@style/setting_item"
-                android:text="@string/not_tv_type3" />
-
-            <CheckBox
-                android:id="@+id/not_cb_type3"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:gravity="center" />
-        </LinearLayout>
+        <CheckBox
+            android:id="@+id/not_cb_type3"
+            style="@style/notification_checkbox"
+            android:text="@string/not_tv_type3" />
 
 
         <TextView
-            style="@style/setting_item"
+            style="@style/notification_cart"
             android:layout_marginTop="10dp"
             android:paddingLeft="0dp"
             android:text="@string/not_tv_info" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/gray_lin" />
+        <CheckBox
+            android:id="@+id/not_cb_info1"
+            style="@style/notification_checkbox"
+            android:text="@string/not_tv_info1" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                style="@style/setting_item"
-                android:text="@string/not_tv_info1" />
-            <CheckBox
-                android:id="@+id/not_cb_info1"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:gravity="center"   />
-        </LinearLayout>
 
     </LinearLayout>
 </LinearLayout>
