--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -116,6 +116,17 @@
         <item name="android:padding">8dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:layout_weight">1</item>
+        <item name="android:textSize">@dimen/text_size_item2</item>
+        <item name="android:textColor">@color/gray_text</item>
+    </style>
+
+    <style name="per_tv_group">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">@dimen/text_size_item1</item>
         <item name="android:textColor">@color/gray_text</item>
     </style>
 
