--- a/app/src/main/res/layout/fragment_pro_item4.xml
+++ b/app/src/main/res/layout/fragment_pro_item4.xml
@@ -5,4 +5,8 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+    <include layout="@layout/title"/>
+
+
+
 </LinearLayout>
