--- a/app/src/main/res/layout/adapter_pro_additem.xml
+++ b/app/src/main/res/layout/adapter_pro_additem.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     android:orientation="vertical">
 
     <ImageButton
         android:id="@+id/pro_additem_iv_add"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="120dp"
         android:src="@drawable/add_iv_title_select"/>
 
 </LinearLayout>
