--- a/app/src/main/res/layout/adapter_pro_item.xml
+++ b/app/src/main/res/layout/adapter_pro_item.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/pros_item_iv_pic"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="120dp"
         android:layout_centerHorizontal="true"
         android:src="@mipmap/ic_launcher" />
 
