--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -1,52 +1,214 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
 
-
-    <FrameLayout
-        android:id="@+id/pro_fl_content"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/pro_ll_btn_layout" />
+        android:layout_height="170dp"
+        android:fitsSystemWindows="true">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0.3dp"
-        android:layout_below="@+id/pro_fl_content"
-        android:background="@color/gray_lin" />
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/pro_ct_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:contentScrim="@color/white"
+            app:expandedTitleGravity="center_horizontal|top"
+            app:expandedTitleMarginTop="-20dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <LinearLayout
+                android:id="@+id/per_iv_pic"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/ic_launcher"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.7">
+
+
+                <TextView
+                    android:id="@+id/pro_item1_tv_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="55dp"
+                    android:textColor="@color/cal_text"
+                    android:textSize="16sp" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp">
+
+                    <ImageView
+                        android:id="@+id/pro_item1_iv_member1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_launcher" />
+
+                    <ImageView
+                        android:id="@+id/pro_item1_iv_member2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_launcher"
+                        android:visibility="gone" />
+
+                    <ImageView
+                        android:id="@+id/pro_item1_iv_member3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_launcher"
+                        android:visibility="gone" />
+
+                    <ImageView
+                        android:id="@+id/pro_item1_iv_member4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_launcher"
+                        android:visibility="gone" />
+
+                    <ImageView
+                        android:id="@+id/pro_item1_iv_member5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/add_iv_select" />
+                </LinearLayout>
+            </LinearLayout>
+
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/per_tb_bar"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                app:layout_collapseMode="pin" />
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
+
 
     <LinearLayout
-        android:id="@+id/pro_ll_btn_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <TextView
-            android:id="@+id/pro_tv_btn_item1"
-            style="@style/pro_btn_item_text"
-            android:text="@string/pro_tv_btn_item1" />
+            android:layout_width="match_parent"
+            android:layout_height="0.3dp"
+            android:background="@color/gray_lin" />
 
-        <TextView
-            android:id="@+id/pro_tv_btn_item2"
-            style="@style/pro_btn_item_text"
-            android:text="@string/pro_tv_btn_item2" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
 
-        <TextView
-            android:id="@+id/pro_tv_btn_item3"
-            style="@style/pro_btn_item_text"
-            android:text="@string/pro_tv_btn_item3" />
+            <LinearLayout
+                android:id="@+id/pro_ll_btn_layout1"
+                style="@style/pro_btn_layout">
 
-        <TextView
-            android:id="@+id/pro_tv_btn_item4"
-            style="@style/pro_btn_item_text"
-            android:text="@string/pro_tv_btn_item4" />
+                <ImageView
+                    android:id="@+id/pro_iv_btn_image1"
+                    style="@style/pro_btn_image"
+                    android:src="@mipmap/home_press" />
 
-        <TextView
-            android:id="@+id/pro_tv_btn_item5"
-            style="@style/pro_btn_item_text"
-            android:text="@string/pro_tv_btn_item5" />
+                <TextView
+                    android:id="@+id/pro_tv_btn_item1"
+                    style="@style/pro_btn_item_text"
+                    android:text="@string/pro_tv_btn_item1"
+                    android:textColor="@color/default_text" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="0.3dp"
+                android:layout_height="match_parent"
+                android:background="@color/gray_lin" />
+
+            <LinearLayout
+                android:id="@+id/pro_ll_btn_layout2"
+                style="@style/pro_btn_layout">
+
+                <ImageView
+                    android:id="@+id/pro_iv_btn_image2"
+                    style="@style/pro_btn_image"
+                    android:src="@mipmap/task" />
+
+                <TextView
+                    android:id="@+id/pro_tv_btn_item2"
+                    style="@style/pro_btn_item_text"
+                    android:text="@string/pro_tv_btn_item2" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="0.3dp"
+                android:layout_height="match_parent"
+                android:background="@color/gray_lin" />
+
+            <LinearLayout
+                android:id="@+id/pro_ll_btn_layout3"
+                style="@style/pro_btn_layout">
+
+                <ImageView
+                    android:id="@+id/pro_iv_btn_image3"
+                    style="@style/pro_btn_image"
+                    android:src="@mipmap/file" />
+
+                <TextView
+                    android:id="@+id/pro_tv_btn_item3"
+                    style="@style/pro_btn_item_text"
+                    android:text="@string/pro_tv_btn_item3" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="0.3dp"
+                android:layout_height="match_parent"
+                android:background="@color/gray_lin" />
+
+            <LinearLayout
+                android:id="@+id/pro_ll_btn_layout4"
+                style="@style/pro_btn_layout">
+
+                <ImageView
+                    android:id="@+id/pro_iv_btn_image4"
+                    style="@style/pro_btn_image"
+                    android:src="@mipmap/statistics" />
+
+                <TextView
+                    android:id="@+id/pro_tv_btn_item4"
+                    style="@style/pro_btn_item_text"
+                    android:text="@string/pro_tv_btn_item4" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="0.3dp"
+                android:layout_height="match_parent"
+                android:background="@color/gray_lin" />
+
+            <LinearLayout
+                android:id="@+id/pro_ll_btn_layout5"
+                style="@style/pro_btn_layout">
+
+                <ImageView
+                    android:id="@+id/pro_iv_btn_image5"
+                    style="@style/pro_btn_image"
+                    android:src="@mipmap/team" />
+
+                <TextView
+                    android:id="@+id/pro_tv_btn_item5"
+                    style="@style/pro_btn_item_text"
+                    android:text="@string/pro_tv_btn_item5" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+
+        <FrameLayout
+            android:id="@+id/pro_fl_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
-</RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
