--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="connect_fai" type="id">网络连接失败</item>
+    <item name="pub_choseproject_rb1" type="id">1000</item>
 </resources>
