--- a/app/src/main/res/layout/fragment_pro_item1.xml
+++ b/app/src/main/res/layout/fragment_pro_item1.xml
@@ -7,6 +7,6 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/pro_item1_rv_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
