--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="default_text">#03a9f4</color>
     <color name="gray_text">#aaa</color>
     <color name="white">#fff</color>
+    <color name="white2">#f8f8f8</color>
     <color name="gray_lin">#ddd</color>
     <color name="gray_circle">#eee</color>
     <color name="gray_circle2">#e5e5e5</color>
