--- a/app/src/main/res/layout/adapter_pro_item2_task2.xml
+++ b/app/src/main/res/layout/adapter_pro_item2_task2.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="25dp"
     android:layout_marginStart="10dp"
+    android:background="@color/white2"
     android:orientation="horizontal">
 
     <ImageView
@@ -30,6 +31,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/pro_text"
                 android:padding="8dp"
                 android:textSize="@dimen/text_size_item2"
                 tools:text="画logo" />
