--- a/app/src/main/res/layout/adapter_pro_item3_folder.xml
+++ b/app/src/main/res/layout/adapter_pro_item3_folder.xml
@@ -5,14 +5,17 @@
     android:gravity="center_vertical">
 
     <ImageView
-        android:id="@+id/pro_item5_folder_iv_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:id="@+id/pro_item3_folder_iv_pic"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:src="@mipmap/file_grey_iv" />
 
     <TextView
-        android:id="@+id/pro_item5_folder_tv_name"
+        android:id="@+id/pro_item3_folder_tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/cal_text"
