--- a/app/src/main/res/layout/fragment_pro_item3.xml
+++ b/app/src/main/res/layout/fragment_pro_item3.xml
@@ -4,5 +4,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/title" />
+    <TextView
+        android:id="@+id/pro_item3_tv_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:drawableStart="@drawable/add_iv_title_select"
+        android:text="@string/add"
+        android:textSize="@dimen/text_size_item2"
+        android:textColor="@color/cal_text" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/pro_item3_rv_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
 </LinearLayout>
