--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -78,7 +78,9 @@
                 android:id="@+id/acc_bt_join"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_margin="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="30dp"
                 android:background="@null"
                 android:visibility="gone"
                 android:text="@string/acc_bt_join" />
@@ -86,7 +88,9 @@
                 android:id="@+id/acc_bt_message"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_margin="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="20dp"
                 android:background="@null"
                 android:visibility="gone"
                 android:text="@string/acc_bt_message" />
